@@ -12,23 +12,7 @@
                                department_request python:request.get('department', None);
                                employees python:department_request and view.employees(department_request) or view.employees()">
 
-        <div id="departments-wrapper" tal:condition="view/departments">
-            <strong><span tal:omit-tag=""
-                          i18n:translate=""
-                          i18n:domain="intranett">Departments</span>:</strong> <a href="" title="Show all employees"
-            tal:condition="department_request"
-            tal:attributes="href string:${context/absolute_url}/employee-listing">Show employees of all departments.</a>
-            <ul id="departments-list" class="horrList">
-                <li tal:repeat="department view/departments"
-                    tal:attributes="class python:department_request == department and 'selected' or 'plain'">
-                    <a href="" title=""
-                       tal:attributes="href string:${context/absolute_url}/employee-listing?department=$department"
-                       tal:content="department">IT Department</a>
-                </li>
-            </ul>
-        </div>
-
-        <dl tal:condition="department_request"
+        <!-- <dl tal:condition="department_request"
             class="portalMessage info visualClear">
             <dt i18n:translate="">Info</dt>
             <dd i18n:translate="number_of_employees_found" i18n:domain="intranett">
@@ -37,48 +21,81 @@
                 <b tal:content="department_request" i18n:name="employees_department">Department</b>
                 department.
             </dd>
-        </dl>
-
-        <div id="employee-listing-wrapper">
-            <tal:employee repeat="employee employees">
-            <div class="tileItem visualIEFloatFix row"
-                 tal:define="department employee/department|nothing">
-                <div class="cell width-5 position-0">
-                    <a href="#"
-                       tal:attributes="href string:$portal_url/author/${employee/username};
-                                       title employee/fullname">
-                        <img height="100" class="image-left" alt="" src=""
-                             tal:condition="employee/thumbnail_url"
-                             tal:attributes="src employee/thumbnail_url" />
-                        <img height="100" class="image-left" alt="" src=""
-                             tal:condition="not:employee/thumbnail_url"
-                             tal:attributes="src string:$portal_url/defaultUser.png" />
-                    </a>
-                </div>
-                <div class="cell width-11 position-5">
-                    <h2 class="tileHeadline">
-                        <span class="summary">
-                            <a class="contenttype-document state-private url"
-                               tal:content="employee/fullname | employee/username"
-                               tal:attributes="href string:$portal_url/author/${employee/username};
-                                               title employee/fullname">Test Page</a>
-                            <!-- <sup class="manageUser"
-                                 tal:condition="view/can_manage"><a href="" title=""
-                               tal:attributes="href string:$portal_url/@@user-information?userid=${employee/username};">Edit</a></sup> -->
-                        </span>
-                    </h2>
-                    <div class="tileBody" i18n:domain="intranett">
-                        <tal:position condition="employee/position"><span tal:replace="employee/position" />,</tal:position>
-                        <tal:department condition="employee/department"><a href=""
-                             tal:attributes="href string:${context/absolute_url}/employee-listing?department=$department"
-                             tal:content="employee/department">Department</a></tal:department>
-                        <tal:mobile condition="employee/mobile"><br /><span tal:omit-tag="" i18n:translate="label_mobile">Mobile phone</span>: <span tal:content="employee/mobile" /></tal:mobile>
-                        <tal:phone condition="employee/phone"><br/><span tal:omit-tag="" i18n:translate="label_phone">Phone</span>: <span tal:content="employee/phone" /></tal:phone>
+        </dl> -->
+        
+        <article id="content">
+            
+            <header>
+                <tal:departmentview condition="department_request">
+                    <h1 class="documentFirstHeading" tal:condition="department_request">
+                        <span tal:content="department_request" /> department
+                    </h1>                
+                    <div class="documentDescription">
+                        <a href="" title="Show all employees"
+            tal:condition="department_request"
+            tal:attributes="href string:${context/absolute_url}/employee-listing">Show employees of all departments?</a>
                     </div>
+                </tal:departmentview>
+                <h1 class="documentFirstHeading" tal:condition="not:department_request" i18n:translate="header_employees">Employees</h1>                
+            </header>
+            <div id="content-core">
+                
+                <div id="departments-wrapper" tal:condition="python:view.departments() and not department_request">
+                    <strong><span tal:omit-tag=""
+                                  i18n:translate=""
+                                  i18n:domain="intranett">Departments</span>:</strong>
+                    <ul id="departments-list" class="horrList">
+                        <li tal:repeat="department view/departments"
+                            tal:attributes="class python:department_request == department and 'selected' or 'plain'">
+                            <a href="" title=""
+                               tal:attributes="href string:${context/absolute_url}/employee-listing?department=$department"
+                               tal:content="department">IT Department</a>
+                        </li>
+                    </ul>
+                </div>
+                
+                <div id="employee-listing-wrapper">
+                    <tal:employee repeat="employee employees">
+                    <div class="tileItem visualIEFloatFix row"
+                         tal:define="department employee/department|nothing">
+                        <div class="cell width-5 position-0">
+                            <a href="#"
+                               tal:attributes="href string:$portal_url/author/${employee/username};
+                                               title employee/fullname">
+                                <img height="100" class="image-left" alt="" src=""
+                                     tal:condition="employee/thumbnail_url"
+                                     tal:attributes="src employee/thumbnail_url" />
+                                <img height="100" class="image-left" alt="" src=""
+                                     tal:condition="not:employee/thumbnail_url"
+                                     tal:attributes="src string:$portal_url/defaultUser.png" />
+                            </a>
+                        </div>
+                        <div class="cell width-11 position-5">
+                            <h2 class="tileHeadline">
+                                <span class="summary">
+                                    <a class="contenttype-document state-private url"
+                                       tal:content="employee/fullname | employee/username"
+                                       tal:attributes="href string:$portal_url/author/${employee/username};
+                                                       title employee/fullname">Test Page</a>
+                                    <!-- <sup class="manageUser"
+                                         tal:condition="view/can_manage"><a href="" title=""
+                                       tal:attributes="href string:$portal_url/@@user-information?userid=${employee/username};">Edit</a></sup> -->
+                                </span>
+                            </h2>
+                            <div class="tileBody" i18n:domain="intranett">
+                                <tal:position condition="employee/position"><span tal:replace="employee/position" />,</tal:position>
+                                <tal:department condition="employee/department"><a href=""
+                                     tal:attributes="href string:${context/absolute_url}/employee-listing?department=$department"
+                                     tal:content="employee/department">Department</a></tal:department>
+                                <tal:mobile condition="employee/mobile"><br /><span tal:omit-tag="" i18n:translate="label_mobile">Mobile phone</span>: <span tal:content="employee/mobile" /></tal:mobile>
+                                <tal:phone condition="employee/phone"><br/><span tal:omit-tag="" i18n:translate="label_phone">Phone</span>: <span tal:content="employee/phone" /></tal:phone>
+                            </div>
+                        </div>
+                    </div>
+                    </tal:employee>
                 </div>
             </div>
-            </tal:employee>
-        </div>
+        </article>
     </metal:content>
 
 </body>
